--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,29 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    {% block bar %} {% endblock %}
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Из Москвы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Из Петербурга</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Из Новосибирска</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Из Екатеринбурга</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Из Казани</a>
+          </li>
+        </ul>
+        </div>
     </nav>
   </header>
   <main class="container mt-3">
-    {% block container %} {% endblock %}
+      {% block container %} {% endblock %}
   </main>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
