--- a/templates/depature.html
+++ b/templates/depature.html
@@ -1,23 +1,19 @@
 {% extends 'base.html' %}
 
 {% block container %}
-    <h1 class="display-5 mt-4">Летим из Новосибирска</h1>
+    <h1 class="display-5 mt-4">Летим {{title }}</h1>
     <p class="mb-4">Найдено 15 туров, от 26 000 до 84 600 и от 4 ночей до 15 ночей</p>
     <!-- CARDS -->
-    <div class="row mt-5">
-        {% for tour in tours.values() %}
-            {%  if tour.departure==depature%}
+    <div class="row mt-5">{% for tour in tours.values() %}{%  if tour.departure==depature%}
         <div class="col-4">
         <div class="card mb-4">
-          <img src={{tour.picture }} class="card-img-top img-fluid" alt="">
+          <img src="{{tour.picture}}" class="card-img-top img-fluid" alt="">
           <div class="card-body">
             <h2 class="h5 card-title">{{tour.title}}</h2>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">{{ tour.description|truncate(100, False) }}</p>
             <a href="#" class="btn btn-sm btn-primary">Подробнее</a>
           </div>
         </div>
-      </div>
-            {% endif %}
-    {% endfor %}
+      </div>{% endif %}{% endfor %}
     </div>
 {% endblock %}
