--- a/templates/test.html
+++ b/templates/test.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-{% if (role) == "admin" %}
-    <p>Hello, {{ role }}</p>
-{% else %}
-<p>NO {{ role }}</p>
-{% endif %}
+<img src="https://images.unsplash.com/photo-1551882547-ff40c63fe5fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" width="300" height="200" class="card-img-top img-fluid" alt="">
 </body>
 </html>
